--- a/styles/hotdeals.css
+++ b/styles/hotdeals.css
@@ -4,15 +4,16 @@
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
-    padding: 36px 0;  
+    padding: 36px 0 73px 0;  
 }
   
 .deals-header h2{
     margin:0 auto 12px auto;
-    width: 285px;
+    width: 80%;
     font-size: 24px;
-    padding: 0 20px;
-    margin-top: 20px ;
+    padding: 0 30px;
+    letter-spacing: 0px;
+    line-height: 28px;
     /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 }
 
@@ -22,21 +23,22 @@
     margin: 0 auto 23px auto;
 }
 
-/* .deals-header button {
-    margin-bottom: 74px;
-} */
-/* 
-  .deals-content {
-    background: #0B0146;
-} */
+.deals-header button {
+  letter-spacing: 0.3px;
+  line-height: 14px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 550;
+}
 
-  .deals-content .sub-heading {
+  /* .deals-content .sub-heading {
     color: #0B0146;
-    }
+    } */
 
     .header-content h2{
-        margin-top: 20px;
+      margin-top: 20px;
       color:#0B0146;
+      letter-spacing: 1.8px;
+      line-height: 21px;
     }
   
     .header-content {
@@ -47,7 +49,6 @@
   
 .header-content p {
     width: 75%;
-    padding: 0 20px;
     margin: 0 auto;
 }
 
@@ -59,9 +60,8 @@
   
   .deal {
     text-align: left;
-    margin: 20px auto 0 auto;
     padding-bottom: 20px;
-    border-bottom: 1px solid rgba(95, 95, 95, 0.473);
+    border-bottom: 0.7px solid rgba(143, 143, 143, 0.473);
   }
   
   .deal-details{
@@ -71,12 +71,16 @@
   }
   
   .book-deal {
-    width: 73px;
+    width: 25%;
+    height: 36px;
     font-size: 12px;
     background-color: #009A18;
     color: #ffffff;
     border-radius: 8px;
     border: none;
+    padding: 0;
+    margin: 5px 0 0 0;
+    text-align: center;
   }
   
   .deal p {
@@ -92,7 +96,9 @@
     color: #0B0146 ;
     background-color: #ffffff;
     font-size: 12px;
-    padding-bottom: 200px;
+    padding-bottom: 150px;
   }
   
-  
+  .deals-content .payment {
+    margin-top: -100px;
+  }
