--- a/styles/form.css
+++ b/styles/form.css
@@ -6,11 +6,20 @@ body{
 form {
     background-color: #FFFFFF;
     border-radius: 15px;
-    box-shadow: 0px 0px 24px #00000029;
-    padding: 44px 30px 32px;
-    margin: 20px auto 20px auto;
+    box-shadow: 0px 0px 24px #00000029;   
+    margin: 50px auto 20px auto;
     width: 80%;
-    min-width: 286px;
+    padding-bottom: 60px;
+  }
+
+form h2 {
+  font-size: 24px;
+  line-height: 22px;
+  color: #0B0146;
+}
+
+  .form-content {
+    padding: 44px 30px 32px;
   }
   
 
@@ -28,32 +37,52 @@ form p {
 .reservation-form p{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
-  padding: 11px 31px;
+  padding: 11px 20px;
 }
 
 form h2 {
   color: #0B0146;
 }
 
-.form-p { 
+.form-note { 
   background-color: #FBFFA2;
   color: #0B0146;
   font-size: 10px;
-  width: 100%;
-  overflow: visible;
-  padding: 0 !important;
+  text-align: center;
 }
 
-button {
+/* .submit-button button {
     background-color:#006CFF ;
     color: #FFFFFF;
     font-size: 12px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     border: none;
-    border-radius: 43px;
-    padding: 11px 35px ;
-    margin: 20px 25px 0 25px;
+    border-radius: 12px;
+    padding: 11px 50px;
+    letter-spacing: 0;
+    line-height: 14px;
     text-align: center;
-    letter-spacing: 1px;
+    margin: 20px 0;
+} */
+
+.submit-button { 
+  /* background-color: #FBFFA2; */
+  color: #0B0146;
+  font-size: 10px;
+  text-align: center;
 }
+
+.submit-button button {
+  background-color:#006CFF ;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 600;
+    border: none;
+    border-radius: 12px;
+    padding: 11px 51px;
+    letter-spacing: 0;
+    line-height: 14px;
+    text-align: center;
+  }
