--- a/styles/packageOpened.css
+++ b/styles/packageOpened.css
@@ -5,16 +5,112 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-    padding-bottom:31px;
+  }
+  
+  /* .selected-package-header-bg {
+    background-color:rgba(0, 0, 0, 0.54);
+    width: 100%;
+    height: 100%;
+    padding: 36px 35px 37px 0;
   }
   
   .return-button {
-    padding: 10px;
-    color: #707070;
+    padding: 9px 12px 9px 12px;
+    background-color: rgba(235, 235, 235, 1);
+    color: rgba(112, 112, 112, 1);
     font-size: 12px;
+    letter-spacing: 0;
+    line-height: 14px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 550;
     border: none;
     border-radius: 4px;
-    margin: 24px auto 0 37px;
+    margin: 0 auto 0 37px;
+  }
+  
+  
+  .selected-package-header h1{
+    margin:24px auto 24px auto;
+    font-size: 24px;
+    padding-bottom: 20px;
+    font-weight: 500;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+
+  .selected-package-heading h1{
+    font-size: 24px;
+}
+
+  .selected-package-heading {
+    width: 80%;
+    margin: 24px auto;
+    text-align: center;
+  }
+  
+  .package-destination {
+    color: #F5FF00;
+    font-weight: 700;
+}
+
+  .search {
+    text-align: center;
+  }
+  
+  .has-search .form-control {
+    padding-left: 2.975rem;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin: 0 auto;
+    width: 80%;
+    border-radius: 12px;
+  }
+  
+  .has-search .form-control-feedback {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: 2.375rem;
+    height: 2.375rem;
+    line-height: 2.375rem;
+    margin-left: 50px;
+    pointer-events: none;
+    color: #aaa;
+  }
+  
+  .search-button {
+    background-color:#006CFF ;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 400;
+    border: none;
+    border-radius: 12px;
+    padding: 11px 35px ;
+    letter-spacing: 1px;
+    width: 80%;
+  } */
+
+  .selected-package-header-bg {
+    background-color:rgba(0, 0, 0, 0.54);
+    width: 100%;
+    height: 100%;
+    padding: 36px 0 37px 0;
+}
+
+
+  .return-button {
+
+    padding: 9px 12px 9px 12px;
+    background-color: rgba(235, 235, 235, 1);
+    color: rgba(112, 112, 112, 1);
+    font-size: 12px;
+    letter-spacing: 0;
+    line-height: 14px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 550;
+    border: none;
+    border-radius: 4px;
+    margin: 0 auto 0 37px;
   }
   
   .selected-package-heading {
@@ -105,12 +201,15 @@
   }
   
   .book-package {
-    width: 73px;
+    width: 25%;
+    height: 36px;
     font-size: 12px;
     background-color: #009A18;
     color: #ffffff;
     border-radius: 8px;
     border: none;
+    padding: 0;
+    margin: 5px 0 0 0;
   }
   
   .selected-package p {
