--- a/styles/packages.css
+++ b/styles/packages.css
@@ -4,7 +4,9 @@
   } */
 
 .package-content button {
-    font-weight: 600;
+    font-weight: 550;
+    letter-spacing: 0;
+    line-height: 14px;
 }
 
   .packages-header {
@@ -14,22 +16,26 @@
     background-repeat: no-repeat;
     background-color: #707070;
     text-align: center;
-    padding: 36px 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.packages-header-bg {
+    background-color:rgba(0, 0, 0, 0.54);
+    width: 100%;
+    height: 100%;
+    padding: 36px 35px 37px 35px;
 }
 
 .packages-header h2{
     margin:0 auto 12px auto;
-    width: 80%;
     font-size: 24px;
-    padding: 0 30px;
+    padding: 0 20px;
 }
 
 .packages-header p {
     font-size: 12px;
-    width: 80%;
     margin: 0 auto 23px auto;
-    padding: 10px 40px;
+    padding: 10px 20px;
     color: #ffffff;
     font-weight: 500;
 }
@@ -41,14 +47,18 @@
 }
 
 .package-button {
-    padding: 11.5px 10px ;
-    width: 42.5%;
+    padding: 11.5px 7.5px ;
+    width: 45%;
     font-size: 12px;
     color:#707070;
     font-weight: 700;
     border: none;
     border-radius: 8px;
+    background-color: #EBEBEB;
+    letter-spacing: 0;
+    line-height: 14px;
     margin:0 10px 8px 0;
+    text-align: center;
 }
 
 .package-content {
@@ -72,7 +82,7 @@
 .aircraft-destination {
     background-color: #FDFFD6;
     border-radius: 8px;
-    padding: 13px 51px;
+    padding: 13px 40px;
     width: 80%;
     margin: 24px auto;
 }
