--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -15,7 +15,6 @@ h2 {
   font-size: 18px;
   letter-spacing: 1.8px;
   font-weight: normal;
-  /* width: 180px; */
   margin:  0 auto;
   color: #FFFFFF;
   padding-bottom: 10px;
@@ -34,22 +33,45 @@ h3 {
   color: #FFFFFF;
 }
 
+button {
+  background-color:#006CFF ;
+  color: #FFFFFF;
+  font-size: 12px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 600;
+  border: none;
+  border-radius: 43px;
+  padding: 11px 40px 11px 16px;
+  margin: 20px 25px 0 25px;
+  text-align: left;
+  letter-spacing: 1px;
+}
+
+
 .sub-heading {
   font-size: 12px;
   color:#FFFFFF8A ;
   margin: 0 auto;
 }
 
-/* entypo */
-[class*="fontawesome-"]:before {
+/* fontawesome */
+[class*="fontawesome-chevron-right"]:before {
   font-family: 'fontawesome', sans-serif;
   color: #ffffff;
-  /* border-radius: 100%;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
   background-color: #FFFFFF8A;
-  padding: 5px;
-  font-size: 10px;
+  padding: 4px 6px 3px 5px ;
+  text-align: center;
+  font-size: 2px;
   position: relative;
-  left: 20px; */
+  left: 20px;  
+}
+
+[class*="fontawesome-"]:before {
+  font-family: 'fontawesome', sans-serif;
+  left: 20px;
   font-size: 12px;
 }
 
@@ -73,7 +95,7 @@ h3 {
 }
 
 
-.header-button {
+/* .header-button {
   background-color:#006CFF ;
   color: #FFFFFF;
   font-size: 12px;
@@ -81,10 +103,9 @@ h3 {
   font-weight: 400;
   border: none;
   border-radius: 43px;
-  padding: 11px 35px ;
   text-align: center;
   letter-spacing: 1px;
-}
+} */
 
 .navbar {
   padding: 0;
@@ -115,9 +136,9 @@ h3 {
     text-align: center;
   }
 
-ul:nth-child(6) {
+/* ul:nth-child(6) {
   color: #FF90DD;
-}
+} */
 
   .nav li {
     list-style-type: none;
@@ -146,6 +167,7 @@ ul:nth-child(6) {
     flex-flow: row nowrap;
     justify-content: space-between;
     width: 100%;
+    height:52px;
     padding:10px 37px;
     color: #FFFFFF8A;
     background: #ffffff;
@@ -185,31 +207,42 @@ ul:nth-child(6) {
  background-image: url('https://res.cloudinary.com/kinkidy/image/upload/v1581348352/juyonna_ui/flights-header-image.png');
  background-position: center;
  background-size: cover;
- padding: 28px 0 78px 38px;
+ padding: 28px 37px 74px;
 }
 
 .header-menu {
-  padding-bottom: 24px;
   color: #FFFFFF;
   font-size: 12px;
   font-weight: 600;
-  margin: 28px auto auto 38px;
+  margin: 0 0 24px;
 }
 
-.nav-list button{
+.nav-list a{
   background: transparent;
   border: none;
-  border-bottom: 5px solid #ffffff;
+  /* border-bottom: 3px solid #ffffff; */
   font-size: 12px;
+  padding: 0;
+  margin: 0;
   font-weight: 500;
+  text-align: center;
+  padding: 0 12px 5px ;
+  text-decoration: none;
 }
 
-.nav-list button:first-child{
-  border-bottom: 6px solid #ffffff;
+/* .nav-list a:nth-child(1) {
+  border-bottom: 5px solid #006CFF;
+} */
+
+.nav-list .active {
+  color: #ffffff;
 }
 
-.nav-list button, a {
-  padding-bottom: 10px ;
+.nav-border span {
+  padding: 0.5px 70px 0 0;
+ background-color: rgb(165, 167, 177);
+ border-radius: 50px;
+ width: fit-content;
 }
 
 .navbar-contact {
@@ -224,16 +257,9 @@ ul:nth-child(6) {
 }
 
 .index-header  h1{
-  margin: 24px auto auto 38px;
+  line-height: 28px;
+  font-size: 24px;
 }
-
-/* .nav-border span {
-  display: inline-block;
-  height: 5px;
-  width: 63px;
-  border: 2px solid #ffffff;
-  border-radius: 10px;
-} */
 
 .header h1 {
   font-size: 24px;
@@ -242,7 +268,10 @@ ul:nth-child(6) {
 }
 
 .index-header-button {
-  margin: 50px auto auto 38px;
+  margin: 50px 0 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 500;
+  line-height: 14px;
 }
 
 .content {
@@ -254,14 +283,17 @@ ul:nth-child(6) {
   
   .content-header h2 {
     font-size: 18px;
-    width: 180px; 
-    padding-top: 20px ;
-    word-wrap: break-word;
+    width: 60%; 
+    padding: 20px 20px 10px 20px ;
+    line-height: 21px;
+    letter-spacing: 1.8px;
+    font-weight: 500;
     color:#0B0146 !important;
     }
 
     .content-header p {
       font-size: 12px;
+      line-height: 14px;
       padding-bottom: 170px;
       color:#0B0146 !important;
     }
@@ -276,7 +308,7 @@ ul:nth-child(6) {
   .flight-deals {
     margin-top: -130px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(286px));
+    grid-template-columns: repeat(auto-fit, minmax(80%));
   }
 
   .flight {
@@ -339,8 +371,11 @@ ul:nth-child(6) {
   }
 
   .package-header h2 {
-    width: 216px;
+    width: 70%;
+    padding: 0 20px;
     margin-top: 50px;
+    letter-spacing: 1.6px;
+    line-height: 19px;
   }
 
   .package-sub-heading {
@@ -415,7 +450,7 @@ ul:nth-child(6) {
 
   .services-column {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(286px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(80%, 1fr));
     color: #ffffff ;
     font-size: 12px;
   }
@@ -437,7 +472,7 @@ ul:nth-child(6) {
   .service {
     border-radius: 12px 12px 12px 12px;
     margin: 0px auto 20px auto ;
-    width: 286px;
+    width: 80%;
   }
 
   .service:nth-child(1) {
@@ -468,7 +503,7 @@ ul:nth-child(6) {
     border: 1px solid #ffffff;
     border-radius: 12px;
     background:transparent;
-    width: 223px;
+    width: 80%;
     height: 36px;
     color: #ffffff;
     font-weight: 500;
@@ -496,12 +531,14 @@ ul:nth-child(6) {
   }
 
   .testimony-header {
-    margin-bottom: 24px;
+    margin:0 auto 24px auto;
+    width: 60%;
+    padding: 0 20px;
   }
 
   .testimonies  {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(286px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(80%, 1fr));
       color: #ffffff ;
       font-size: 12px;
   }
@@ -512,7 +549,7 @@ ul:nth-child(6) {
 
   .testimony {
     margin: 0 auto 10px;
-    width: 286px;
+    width: 80%;
     text-align: left;
     padding-bottom: 20px;
   }
@@ -527,7 +564,7 @@ ul:nth-child(6) {
   .testimony-profile img {
     border-radius: 50px;
     margin-right: 16.25px;
-    width: 36px;
+    width: 12%;
     height: 36px;
     border: 1px solid #FFFFFF;
   }
@@ -543,17 +580,18 @@ ul:nth-child(6) {
     box-shadow: 0 3px 24px #00000029;
     color: #0B0146 !important;
     margin: -90px auto 30px auto;
-    /* padding-top: 20px; */
-    padding: 20px 40px 20px 40px;
+    padding: 20px 40px 0 40px;
 
   }
 
   .payment h1 {
     text-decoration: line-through;
+    font-size: 52px;
+    line-height: 61px;
   }
 
   .payment h3 {
-    width: 90%;
+    width: 100%;
     font-size: 18px;
     font-weight: 550;
     color: #0B0146;
@@ -562,13 +600,9 @@ ul:nth-child(6) {
   }
 
   .payment p {
-    width: 90%;
+    /* width: 90%; */
     margin: 20px auto 20px auto;
     line-height: 14px;
-  }
-
-  .payment button{
-    margin-top: 0;
   }
 
   .payment img {
@@ -583,19 +617,24 @@ ul:nth-child(6) {
     font-weight: 400;
     border: none;
     border-radius: 43px;
-    padding: 11px 35px ;
+    /* padding: 11px 35px ; */
     text-align: center;
     letter-spacing: 1px;
-    width: 223px;
     height: 36px;
     font-weight: 500;
     margin: 0 auto;
+  
+  }
+
+  .payment a {
+    text-decoration: none;
+    color: #ffffff;
   }
 
   .social-icons {
     background-color: #ffffff;
     border-radius: 12px;
-    width: 286px;
+    width: 80%;
     margin: auto auto;
   }
   
@@ -622,34 +661,25 @@ ul:nth-child(6) {
     .nav a {font-size: 18px;}
   }
 
-  /*
-    FLIGHT CONTENT 
-                  */
+ 
 
 
 /*
-  VISA CONTENT
+  FORM
               */
+.form-content   {
+  padding: 44px 30px 0;
+}
 
+.form-note {
+  background-color: #0B0146;
+  margin: 30px 0;
+  text-align: center;
+}
 
-/*
- HOTEL CONTENT
-              */
-
-
-/*
-  DEALS CONTENT
-              */
-
-
-
-/*
-  PAYMENT CONTENT
-                */
-
-
-
-/*
-  PACKAGE HEADER
-              */
-
+.form-note  p{
+    padding: 11.5px 30px;
+    color: #76B0FF;
+    font-size: 10px;
+    font-weight: 700;
+}
