--- a/styles/visa.css
+++ b/styles/visa.css
@@ -4,8 +4,14 @@
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
-    padding: 36px 0;
 }
+
+.visa-header-bg {
+    background-color: rgba(11, 1, 70, 0.71);
+    width: 100%;
+    height: 100%;
+    padding-top: 36px;
+  }
 
 .visa-header h1 {
     margin: 0 auto ;
@@ -32,8 +38,10 @@
 
 .visa-content-header h2{
     margin:0 auto 12px auto;
-    width: 196px;
+    width: 70%;
     font-size: 18px;
+    letter-spacing: 1.8px;
+    line-height: 21px;
 }
 
 .visa-content-header p {
@@ -46,11 +54,14 @@
     background-color: #FFFFFF;
     border-radius: 15px;
     box-shadow: 0px 0px 24px #00000029;
-    padding: 44px 30px 130px;
     margin: -750px auto 0 auto;
-    width: 286px;
+    width: 80%;
     min-width: 286px;
   }
+
+  .form-content   {
+    padding: 44px 30px 0;
+ }
 
 .visa-footer {
     background-image: url('https://res.cloudinary.com/kinkidy/image/upload/v1581490116/juyonna_ui/testimoial-bg.svg');
@@ -58,3 +69,16 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.form-note-visa { 
+    background-color: #0B0146;
+    font-size: 10px;
+    text-align: center;
+  }
+
+  .form-note-visa p {
+    color: rgba(118, 176, 255, 1);
+    padding: 11.5px 30px;
+    font-weight: 700;
+    font-size: 10px;
+  }
